Updated bonus section of homework.

--- a/Homework/HW2/hw2.ipynb
+++ b/Homework/HW2/hw2.ipynb
@@ -1,13 +1,21 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2240922f4ba04f1efe0c253f89ec97e6526d12a56042dc3ad3ad5cdd3950801d"
+  "signature": "sha256:efff0a5e2200a07871921db44d122235c525c8772346c4005496a84a2e773d5e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Import data from CSV file:"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -48,7 +56,15 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Define Nearest Neighbors and Cross Validation functions:"
+     ]
     },
     {
      "cell_type": "code",
@@ -59,7 +75,7 @@
       "import numpy\n",
       "\n",
       "def KNearestNeighbors( neighbors, data, classifications ) :\n",
-      "    k_nearest_neighbors = KNeighborsClassifier(n_neighbors=neighbors)\n",
+      "    k_nearest_neighbors = KNeighborsClassifier(n_neighbors=neighbors,weights='uniform')\n",
       "    k_nearest_neighbors.fit(data, classifications)\n",
       "    return k_nearest_neighbors\n",
       "\n",
@@ -83,7 +99,16 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 71
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Find optimal number of neighbors:\n",
+      "(uniform weighting of neighbors)"
+     ]
     },
     {
      "cell_type": "code",
@@ -91,7 +116,7 @@
      "input": [
       "import operator\n",
       "\n",
-      "# Over 120 neighbors seems to fail, maybe that number is too crazy\n",
+      "# Over 120 neighbors fail because the training set only uses 80% of the data set with 5 folds\n",
       "neighbor_scores = {}\n",
       "# Making a map of \"Number of Neighbors\" to \"Cross Validation Score\"\n",
       "for n in xrange(1,121) :\n",
@@ -132,7 +157,23 @@
        ]
       }
      ],
-     "prompt_number": 79
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Plot Result \"Accuracy vs K Nearest Neighbors\":"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "(Play entire notebook to see plot.)"
+     ]
     },
     {
      "cell_type": "code",
@@ -159,13 +200,195 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 40
     },
     {
-     "cell_type": "raw",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
      "source": [
-      "The graph seems to show that there are steps of accuracy.  For the number of neighbors between 0 to ~65, there is an accuracy greater than ~85%.  Past around ~65 there is a drop off where there is another shelf around 75 to 115 neighbors where the accurcy is around ~50%.  It is interesting to see the accuracy happen in steps, though, that must suggest something."
+      "Written question:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The graph seems to show that there are steps of accuracy.  For the number of neighbors between 0 to ~65, there is an accuracy greater than ~85%.  Past around ~65 there is a drop off where there is another shelf around 75 to 115 neighbors where the accurcy is around ~50%.  Since there are only 3 categories in the data set and there is roughly 40 data points for each category, I think that at around 80 neighbors you might be getting an equal number of data points in each category to get you 50% accuracy given that each neighbor is uniformally weighted as the default.  When you change the weighting to 'distance', the non-default, you see that 1-120 neighbors are all above 93% accuracy where the optimal choice is 5 neighbors instead of 11 which could be computationally cheaper depending on the complexity of weighting the calculation."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Bonus Section:"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Iterating over 2-15 Folds and 1-N Neighbors to find the optimal score for changing the number of folds."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "11 Folds with 13 neighbors appears to be the most accurate option."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import operator\n",
+      "from mpl_toolkits.mplot3d import Axes3D\n",
+      "\n",
+      "# Over 120 neighbors fail because the training set only uses 80% of the data set with 5 folds\n",
+      "neighbor_scores_bonus = {}\n",
+      "# Making a map of \"Number of Neighbors\" to \"Cross Validation Score\"\n",
+      "for folds in xrange(2,16) :\n",
+      "    neighbor_scores_bonus[folds] = {}\n",
+      "    range_of_folds = 0\n",
+      "    if (150 % folds) != 0:\n",
+      "        range_of_folds = (150 - (150 / folds) )\n",
+      "    else:\n",
+      "        range_of_folds = ( 150 - ( 150 / folds ) ) + 1\n",
+      "    for n in xrange(1, range_of_folds ):\n",
+      "        #print(\"Folds{0} Neighbors{1}\".format(folds,n))\n",
+      "        neighbor_scores_bonus[folds][n] = CrossValidate( iris_data, iris_data_classifications, KNearestNeighbors, n, folds )\n",
+      "\n",
+      "        \n",
+      "fold_and_neighbor_scores = {}\n",
+      "for folds in neighbor_scores_bonus:\n",
+      "    for neighbors in neighbor_scores_bonus[folds]:\n",
+      "        key_str = str(folds) + \"_\" + str(neighbors)\n",
+      "        fold_and_neighbor_scores[key_str] = neighbor_scores_bonus[folds][neighbors]\n",
+      "        \n",
+      "# Sort map in order of best \"Cross Validation Score\" and only show the first 20 scores of 120\n",
+      "sorted_fold_and_neighbor_scores = sorted( fold_and_neighbor_scores.items(), key=operator.itemgetter(1), reverse=True )\n",
+      "for folds_neighbors,val in sorted_fold_and_neighbor_scores[:50] :\n",
+      "    print ( \"Folds_Neighbors: {0} Score: {1}\".format( folds_neighbors, val) )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Folds_Neighbors: 11_19 Score: 0.98001998002\n",
+        "Folds_Neighbors: 11_13 Score: 0.98001998002\n",
+        "Folds_Neighbors: 11_15 Score: 0.973526473526\n",
+        "Folds_Neighbors: 11_20 Score: 0.973526473526\n",
+        "Folds_Neighbors: 9_13 Score: 0.973447712418\n",
+        "Folds_Neighbors: 9_19 Score: 0.973447712418\n",
+        "Folds_Neighbors: 6_15 Score: 0.973333333333\n",
+        "Folds_Neighbors: 8_15 Score: 0.97331871345\n",
+        "Folds_Neighbors: 12_13 Score: 0.973290598291\n",
+        "Folds_Neighbors: 9_17 Score: 0.973039215686\n",
+        "Folds_Neighbors: 11_18 Score: 0.973026973027\n",
+        "Folds_Neighbors: 11_17 Score: 0.973026973027\n",
+        "Folds_Neighbors: 11_21 Score: 0.973026973027\n",
+        "Folds_Neighbors: 8_19 Score: 0.972953216374\n",
+        "Folds_Neighbors: 8_13 Score: 0.972953216374\n",
+        "Folds_Neighbors: 14_18 Score: 0.972727272727\n",
+        "Folds_Neighbors: 14_19 Score: 0.972727272727\n",
+        "Folds_Neighbors: 14_15 Score: 0.972727272727\n",
+        "Folds_Neighbors: 14_17 Score: 0.972727272727\n",
+        "Folds_Neighbors: 14_23 Score: 0.972727272727\n",
+        "Folds_Neighbors: 12_20 Score: 0.967414529915\n",
+        "Folds_Neighbors: 12_19 Score: 0.967414529915\n",
+        "Folds_Neighbors: 12_14 Score: 0.967414529915\n",
+        "Folds_Neighbors: 13_19 Score: 0.967365967366\n",
+        "Folds_Neighbors: 11_14 Score: 0.967032967033\n",
+        "Folds_Neighbors: 4_11 Score: 0.96692745377\n",
+        "Folds_Neighbors: 9_15 Score: 0.966911764706\n",
+        "Folds_Neighbors: 9_27 Score: 0.966911764706\n",
+        "Folds_Neighbors: 12_21 Score: 0.96688034188\n",
+        "Folds_Neighbors: 12_23 Score: 0.96688034188\n",
+        "Folds_Neighbors: 12_22 Score: 0.96688034188\n",
+        "Folds_Neighbors: 12_12 Score: 0.96688034188\n",
+        "Folds_Neighbors: 12_11 Score: 0.96688034188\n",
+        "Folds_Neighbors: 12_17 Score: 0.96688034188\n",
+        "Folds_Neighbors: 13_17 Score: 0.966783216783\n",
+        "Folds_Neighbors: 10_14 Score: 0.966666666667\n",
+        "Folds_Neighbors: 15_17 Score: 0.966666666667\n",
+        "Folds_Neighbors: 15_15 Score: 0.966666666667\n",
+        "Folds_Neighbors: 15_13 Score: 0.966666666667\n",
+        "Folds_Neighbors: 15_11 Score: 0.966666666667\n",
+        "Folds_Neighbors: 15_19 Score: 0.966666666667\n",
+        "Folds_Neighbors: 6_5 Score: 0.966666666667\n",
+        "Folds_Neighbors: 3_5 Score: 0.966666666667\n",
+        "Folds_Neighbors: 3_6 Score: 0.966666666667\n",
+        "Folds_Neighbors: 2_10 Score: 0.966666666667\n",
+        "Folds_Neighbors: 6_21 Score: 0.966666666667\n",
+        "Folds_Neighbors: 6_20 Score: 0.966666666667\n",
+        "Folds_Neighbors: 6_11 Score: 0.966666666667\n",
+        "Folds_Neighbors: 6_19 Score: 0.966666666667\n",
+        "Folds_Neighbors: 3_11 Score: 0.966666666667\n"
+       ]
+      }
+     ],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Ploting the results in a 3D scatter plot of \"Folds vs Neighbors vs Accuracy Score\""
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from mpl_toolkits.mplot3d import Axes3D\n",
+      "\n",
+      "x = []\n",
+      "y = []\n",
+      "z = []\n",
+      "for folds in neighbor_scores_bonus:\n",
+      "    for neighbors in neighbor_scores_bonus[folds]:\n",
+      "        x.append( folds )\n",
+      "        y.append( neighbors )\n",
+      "        z.append( neighbor_scores_bonus[folds][neighbors] )\n",
+      "        \n",
+      "\n",
+      "x_array = numpy.array( x )\n",
+      "y_array = numpy.array( y )\n",
+      "z_array = numpy.array( z )\n",
+      "\n",
+      "plot2 = pyplot.figure(0)\n",
+      "scat2 = plot2.add_subplot(111, projection='3d')\n",
+      "scat2.scatter(x_array, y_array, z_array)\n",
+      "scat2.set_xlabel(\"K Folds\", fontsize=8)\n",
+      "scat2.set_ylabel(\"K Nearest Neighbors\", fontsize=8)\n",
+      "scat2.set_zlabel(\"Accuracy Score\", fontsize=8)\n",
+      "pyplot.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "It looks like the large numbers of folds with a smaller test slice are more accurate.\n",
+      "This also implies the training set is larger with more folds.  Although, the optimal number\n",
+      "of folds is not 15, the largest number tried.\n",
+      "\n",
+      "11 folds is said to be optimal from the data but I am not sure if a data set of 150 is good\n",
+      "enough to make that determination."
      ]
     }
    ],
